--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<form>
 				<input type="text" id="username" placeholder="Enter your name">
 				<input type="password" id="password" placeholder="Enter your password">
+				<input type="file" id="profile-picture" accept="image/*">
 				<button id="login-btn">Login</button>
 			</form>
 		</div>
