--- a/next-page.html
+++ b/next-page.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>The Purple Hand Gang - Dashboard</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<div class="container">
-		<div class="header">
-			<h1 class="title">THE PURPLE HAND GANG</h1>
-			<div class="profile-info">
-				<img src="" id="profile-picture">
-				<span id="username-display"></span>
-			</div>
-		</div>
-		<!-- Add your chat and other features here -->
-	</div>
-
-	<script src="scriptn.js"></script>
-</body>
+  <head>
+    <title>The Purple Hand Gang - Dashboard</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="user-info">
+      <img id="profile-picture" src="" alt="Profile Picture" />
+      <h1 id="username-display"></h1>
+    </div>
+    <div class="chat-container">
+      <!-- Add chat functionality here -->
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
