--- a/next-page.html
+++ b/next-page.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>The Purple Hand Gang - Dashboard</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="stylen.css" />
   </head>
   <body>
     <div class="user-info">
@@ -12,6 +12,6 @@
     <div class="chat-container">
       <!-- Add chat functionality here -->
     </div>
-    <script src="script.js"></script>
+    <script src="scriptn.js"></script>
   </body>
 </html>
