--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Purple Hand Gang - Login</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>The Purple Hand Gang</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <div class="login-container">
-      <h1>Login</h1>
+      <h1>The Purple Hand Gang</h1>
       <form id="login-form">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required />
@@ -16,8 +16,8 @@
         <input type="password" id="password" name="password" required />
         <button type="submit">Login</button>
       </form>
-      <p>Don't have an account? <a href="#" id="create-account-link">Create one here</a></p>
+      <p>Don't have an account? <a href="create-account.html">Create one here</a></p>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
